<resources>
    <string name="app_name">ContactsKODE</string>

    <string name="contacts_list_title">Contacts</string>

    <string name="contact_name">%1$s %2$s</string>

    <string name="contact_create">Create contact</string>
    <string name="contacts_search">Search contacts</string>
    <string name="contacts_settings">Settings</string>

    <string name="contact_favorite">Add to favorite</string>

    <string name="contact_image_description">Contact\'s image</string>

    <string name="phone_number_call">Make a call</string>
    <string name="phone_number_video_call">Start video call</string>
    <string name="phone_number_chat">Start chatting</string>

    <string name="phone_type_mobile">Mobile</string>
    <string name="phone_type_work">Work</string>
    <string name="phone_type_home">Home</string>

    <string name="contact_create_title">Create Contact</string>
    <string name="contact_edit_title">Edit Contact</string>

    <string name="contact_avatar_from_gallery">Choose photo</string>
    <string name="contact_avatar_take_picture">Take photo</string>

    <string name="take_picture_permission_required">Camera permission is required
        to take a picture.</string>

    <string name="contact_save">Save contact</string>
    <string name="contact_delete">Delete contact</string>

    <string name="contact_unsaved_title">Contact is unsaved</string>
    <string name="contact_unsaved">Contact is unsaved! Are you sure you want to abort the changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="contact_deletion_title">Contact deletion</string>
    <string name="contact_deletion">Are you sure you want to delete this contact?</string>

    <string name="photo_description">Contact\'s photo</string>
    <string name="number_description">Contact\'s phone number</string>
    <string name="contact_name_description">Contact\'s name</string>
    <string name="ringtone_description">Contact\'s ringtone</string>
    <string name="notes_description">Notes about contact</string>

    <string name="change_photo">Change</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="phone_type_hint">Phone type</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="ringtone_hint">Ringtone</string>
    <string name="notes_hint">Notes</string>

    <string name="phone_number_error">Phone number cannot be empty</string>
    <string name="phone_type_error">Phone type is incorrect</string>
    <string name="first_name_error">First name cannot be empty</string>
    <string name="last_name_error">Last name is incorrect</string>

    <integer name="max_name_length">25</integer>
    <integer name="max_phone_length">12</integer>
    <integer name="max_note_length">150</integer>

    <string name="error_base_title">Something went wrong</string>
    <string name="error_base">The problem is on our side, we are already looking into it.
        Please try refreshing the screen later.</string>

    <string name="error_phone_incorrect">Phone number is incorrect.</string>

    <string name="error_validation">Some fields are incorrect.</string>
    <string name="ok">Okay</string>
    <string name="error_validation_field">Field is incorrect</string>

    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>

    <string name="feature_in_development">Feature is in development</string>
</resources>