<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.kode.domain.contacts.entity.PhoneNumber" />

        <variable
            name="clickListener"
            type="com.kode.contacts.presentation.base.adapter.ItemClickedInterface" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_margin"
        android:clickable="true"
        android:focusable="true"
        android:onClick="@{() -> clickListener.onClick(item)}"
        android:theme="@style/Theme.ContactsKODE.ContactInfo">

        <ImageButton
            android:id="@+id/phoneIconButton"
            android:layout_width="@dimen/phone_icon_size"
            android:layout_height="@dimen/phone_icon_size"
            android:layout_marginStart="@dimen/def_margin"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/phone_number_call"
            android:src="@drawable/ic_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phoneNumberView"
            style="@style/phone_number_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/phone_start_margin"
            android:text="@{item.number}"
            app:layout_constraintStart_toEndOf="@id/phoneIconButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="+7 (906) 911 45 78" />

        <TextView
            android:id="@+id/phoneTypeView"
            style="@style/phone_number_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_def_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/phoneNumberView"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberView"
            app:phoneType="@{item.type}"
            tools:text="Mobile" />

        <ImageButton
            android:id="@+id/videoIconButton"
            android:layout_width="@dimen/phone_icon_size"
            android:layout_height="@dimen/phone_icon_size"
            android:layout_marginStart="@dimen/def_margin"
            android:layout_marginEnd="29dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/phone_number_video_call"
            android:src="@drawable/ic_video"
            app:layout_constraintBottom_toBottomOf="@id/chatIconButton"
            app:layout_constraintEnd_toStartOf="@id/chatIconButton"
            app:layout_constraintTop_toTopOf="@id/chatIconButton" />

        <ImageButton
            android:id="@+id/chatIconButton"
            android:layout_width="@dimen/phone_icon_size"
            android:layout_height="@dimen/phone_icon_size"
            android:layout_marginEnd="@dimen/def_margin"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/phone_number_chat"
            android:src="@drawable/ic_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>