<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kode.contacts.presentation.contacts.details.ContactDetailsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.ContactsKODE.ContactInfo">

                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:elevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/colorPrimaryVariant"
                        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                </com.google.android.material.appbar.AppBarLayout>

                <View
                    android:id="@+id/background"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="?attr/colorPrimaryVariant"
                    app:layout_constraintBottom_toBottomOf="@id/nameView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/app_bar" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/photoView"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="@dimen/def_margin"
                    android:contentDescription="@string/contact_image_description"
                    android:scaleType="centerCrop"
                    app:defaultSrc="@{@drawable/ic_avatar_border}"
                    app:imageFilePath="@{viewModel.contact.avatarUri}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/app_bar"
                    app:shapeAppearanceOverlay="@style/roundedCornersImageView"
                    tools:src="@drawable/ic_avatar_border" />

                <TextView
                    android:id="@+id/nameView"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/def_margin"
                    android:gravity="center"
                    android:paddingBottom="16dp"
                    android:text='@{@string/contact_name(viewModel.contact.firstName, viewModel.contact.LastName ?? "")}'
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/photoView"
                    tools:text="Alicia Malcolm" />

                <ImageButton
                    android:id="@+id/phoneIconButton"
                    android:layout_width="@dimen/phone_icon_size"
                    android:layout_height="@dimen/phone_icon_size"
                    android:layout_marginStart="@dimen/def_margin"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/phone_number_call"
                    android:src="@drawable/ic_phone"
                    app:layout_constraintBottom_toBottomOf="@id/phoneTypeView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/phoneNumberView" />

                <TextView
                    android:id="@+id/phoneNumberView"
                    style="@style/phone_number_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/phone_start_margin"
                    android:layout_marginTop="@dimen/def_margin"
                    android:text="@{viewModel.contact.phoneNumber.number}"
                    app:layout_constraintStart_toEndOf="@id/phoneIconButton"
                    app:layout_constraintTop_toBottomOf="@id/nameView"
                    tools:text="+7 (906) 911 45 78" />

                <TextView
                    android:id="@+id/phoneTypeView"
                    style="@style/phone_number_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_def_margin"
                    app:layout_constraintStart_toStartOf="@id/phoneNumberView"
                    app:layout_constraintTop_toBottomOf="@id/phoneNumberView"
                    app:phoneType="@{viewModel.contact.phoneNumber.type}"
                    tools:text="Mobile" />

                <ImageButton
                    android:id="@+id/videoIconButton"
                    android:layout_width="@dimen/phone_icon_size"
                    android:layout_height="@dimen/phone_icon_size"
                    android:layout_marginStart="@dimen/def_margin"
                    android:layout_marginEnd="29dp"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/phone_number_video_call"
                    android:src="@drawable/ic_video"
                    app:layout_constraintBottom_toBottomOf="@id/chatIconButton"
                    app:layout_constraintEnd_toStartOf="@id/chatIconButton"
                    app:layout_constraintTop_toTopOf="@id/chatIconButton" />

                <ImageButton
                    android:id="@+id/chatIconButton"
                    android:layout_width="@dimen/phone_icon_size"
                    android:layout_height="@dimen/phone_icon_size"
                    android:layout_marginEnd="@dimen/def_margin"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/phone_number_chat"
                    android:src="@drawable/ic_chat"
                    app:layout_constraintBottom_toBottomOf="@id/phoneIconButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/phoneIconButton" />

                <View
                    android:id="@+id/phoneRingtoneSeparator"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/separator_height"
                    android:layout_marginTop="@dimen/def_margin"
                    android:background="?attr/colorPrimaryVariant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/ringtoneView"
                    app:layout_constraintTop_toBottomOf="@id/phoneTypeView" />

                <ImageView
                    android:id="@+id/ringtoneIconView"
                    android:layout_width="@dimen/phone_icon_size"
                    android:layout_height="@dimen/phone_icon_size"
                    android:layout_marginStart="@dimen/def_margin"
                    android:layout_marginTop="@dimen/def_margin"
                    android:contentDescription="@string/contact_name_description"
                    android:src="@drawable/ic_music"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phoneRingtoneSeparator" />

                <TextView
                    android:id="@+id/ringtoneView"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/phone_start_margin"
                    app:fileUriToName="@{viewModel.contact.toneUri}"
                    app:layout_constraintBottom_toBottomOf="@id/ringtoneIconView"
                    app:layout_constraintStart_toEndOf="@id/ringtoneIconView"
                    app:layout_constraintTop_toTopOf="@id/ringtoneIconView"
                    tools:text="Galaxy.ogg" />

                <View
                    android:id="@+id/ringtoneNotesSeparator"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/separator_height"
                    android:layout_marginTop="@dimen/def_margin"
                    android:background="?attr/colorPrimaryVariant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ringtoneView" />

                <ImageView
                    android:id="@+id/notesIconView"
                    android:layout_width="@dimen/phone_icon_size"
                    android:layout_height="@dimen/phone_icon_size"
                    android:layout_marginStart="@dimen/def_margin"
                    android:layout_marginTop="@dimen/def_margin"
                    android:contentDescription="@string/notes_description"
                    android:src="@drawable/ic_notes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ringtoneNotesSeparator" />

                <TextView
                    android:id="@+id/notesView"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/phone_start_margin"
                    android:text="@{viewModel.contact.notes}"
                    app:layout_constraintBottom_toBottomOf="@id/notesIconView"
                    app:layout_constraintStart_toEndOf="@id/notesIconView"
                    app:layout_constraintTop_toTopOf="@id/notesIconView"
                    tools:text="Some notes about this contact" />

                <View
                    android:id="@+id/notesSeparator"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/separator_height"
                    android:layout_marginTop="@dimen/def_margin"
                    android:background="?attr/colorPrimaryVariant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/notesView" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:indeterminateTintMode="src_atop"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:loading="@{viewModel.uiState}"
                    tools:visibility="gone" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editContactButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="24dp"
            android:contentDescription="@string/contact_create"
            app:backgroundTint="?attr/colorPrimary"
            app:srcCompat="@drawable/ic_edit"
            app:tint="?attr/colorOnPrimary" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>